Render point annotation group, link map and list views
- reorganize composables
- add button in list item to view it on the map
- render points in annotation groups for improved
performance
- future: tap a cluster to auto-move the camera
- future: alter point icon for visited items

--- a/feature/nearby/src/main/res/values/strings.xml
+++ b/feature/nearby/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
         <item quantity="one">%1$d observation</item>
         <item quantity="other">%1$d observations</item>
     </plurals>
+    <string name="view_button_map">Map</string>
+    <string name="view_button_map_content_description">Switch to map view</string>
+    <string name="view_button_list_content_description">Switch to List view</string>
+    <string name="view_button_list">List</string>
+    <string name="item_see_on_map">View on map</string>
+
 </resources>
